# Sluice

./: .dockerignore  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  CLA.md  CLAUDE.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml  pages.yml  publish.yml
charts/sluice/: Chart.yaml  values.yaml
charts/sluice/templates/: _helpers.tpl  autoscaler.yaml  batch-cleanup-cronjob.yaml  console.yaml  gateway.yaml  ingress.yaml  minio.yaml  redis.yaml
docker/: Dockerfile.autoscaler  Dockerfile.console  Dockerfile.gateway  Dockerfile.worker-base
docs/: app-spec.md  architecture.md  helm-deploy.md  runbook-vm-burst.md
docs/adr/: 001-gateway-as-worker-broker.md  002-short-lived-worker-credentials.md  003-object-store-spec-store.md  004-priced-placement-playbook.md  005-shared-persistent-backends-only.md  006-multi-cluster-ordered-placement.md  007-worker-archetypes-and-packing.md  008-capability-scoped-credentials.md  009-bulk-batch-inference.md  010-portable-batch-credentials.md  011-data-control-plane-store-split.md  012-stateless-burst-vm-lifecycle.md  README.md
examples/segmentation/: Dockerfile  README.md  app.yaml  handler.py  test_handler.py
infra/terraform/modules/sluice-vm-ec2/: main.tf  outputs.tf  startup.sh.tpl  (+1 more)
site/: index.html
smoke/: compose.yaml
templates/model-worker/: README.md  app.yaml  handler.py
tests/charts/: test_helm_template.py
tests/docker/: test_images_build.py
tests/e2e/: test_kind_e2e.py
tests/terraform/: test_modules.py
web/: index.html
(+4 files in other folders)
