[project]
name = "sluice"
version = "0.0.0"
requires-python = ">=3.13"
license = { text = "AGPL-3.0-or-later" }
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.ruff]
line-length = 120
target-version = "py313"
[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
[tool.ruff.lint.flake8-bugbear]
# FastAPI dependency injection legitimately calls these in argument defaults.
extend-immutable-calls = ["fastapi.Depends"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# importlib mode lets a single `pytest packages` run collect all workspace
# packages whose tests dirs share the `tests` package name without colliding.
addopts = "-q --import-mode=importlib"

[tool.mypy]
python_version = "3.13"
strict = true
